# poetry-monorepo-template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
libraries/: README.md
libraries/library_a/: pyproject.toml
libraries/library_a/tests/: test_library_a.py
projects/: README.md
projects/project_a/: pyproject.toml
projects/project_a/tests/: test_project_a.py
tests/: test_poetry_monorepo_template.py
