[tool.poetry]
name = "library_a"
version = "0.1.0"
description = ""
authors = ["anaka <alex.naka@gmail.com>"]
packages = [{include = "library_a"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
