[tool.poetry]
name = "project_a"
version = "0.1.0"
description = ""
authors = ["anaka <alex.naka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
library_a = {path = "../../libraries/library_a", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
